--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Django==1.6.2
+South==0.8.4
 argparse==1.2.1
 django-debug-toolbar==1.0.1
 django-extensions==1.3.3
+psycopg2==2.5.2
 six==1.5.2
 sqlparse==0.1.11
 wsgiref==0.1.2
