--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django==1.6.2
+MySQL-python==1.2.5
 South==0.8.4
+Werkzeug==0.9.4
 argparse==1.2.1
 django-debug-toolbar==1.0.1
 django-extensions==1.3.3
