--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 Django==1.8
-MySQL-python==1.2.5
-South==0.8.4
-Werkzeug==0.9.4
-argparse==1.2.1
+django-ckeditor==5.2.2
 django-debug-toolbar==1.4
 django-extensions==1.3.3
+django-tinymce==2.6.0
+gunicorn==19.7.1
+MySQL-python==1.2.5
+pkg-resources==0.0.0
 psycopg2==2.5.2
 six==1.5.2
+South==0.8.4
 sqlparse==0.1.11
-wsgiref==0.1.2
+Werkzeug==0.9.4
